force-app/main/default/objects/Course__c/fields/AbsorbedNumber__c.field-meta.xml
<CustomField>
    <fullName>AbsorbedNumber__c</fullName>
    <label>כמות נקלטים לקורס</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>