force-app/main/default/objects/Course__c/fields/ActionNumber__c.field-meta.xml
<CustomField>
    <fullName>ActionNumber__c</fullName>
    <label>מס&apos; פעולה</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>