force-app/main/default/objects/Course__c/fields/AdmissionsCommitteeDate__c.field-meta.xml
<CustomField>
    <fullName>AdmissionsCommitteeDate__c</fullName>
    <label>ת.ועדת קבלה</label>
    <type>Date</type>
</CustomField>