force-app/main/default/objects/Course__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>סה&quot;כ עלות כולל מע&quot;מ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>