force-app/main/default/objects/Course__c/fields/BudgetApprovalDate2__c.field-meta.xml
<CustomField>
    <fullName>BudgetApprovalDate2__c</fullName>
    <label>ת. הוצאת אישור תקציבי 2</label>
    <type>Date</type>
</CustomField>