force-app/main/default/objects/Course__c/fields/BudgetApprovalDate3__c.field-meta.xml
<CustomField>
    <fullName>BudgetApprovalDate3__c</fullName>
    <label>ת. הוצאת אישור תקציבי 3</label>
    <type>Date</type>
</CustomField>