force-app/main/default/objects/Course__c/fields/BudgetApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>BudgetApprovalDate__c</fullName>
    <label>ת.הוצאת אישור תקציבי</label>
    <type>Date</type>
</CustomField>