force-app/main/default/objects/Course__c/fields/BudgetApprovalNumber2__c.field-meta.xml
<CustomField>
    <fullName>BudgetApprovalNumber2__c</fullName>
    <label>מס&apos; אישור תקציבי 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>