force-app/main/default/objects/Course__c/fields/BudgetApprovalNumber3__c.field-meta.xml
<CustomField>
    <fullName>BudgetApprovalNumber3__c</fullName>
    <label>מס&apos; אישור תקציבי 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>