force-app/main/default/objects/Course__c/fields/BudgetApprovalNumber__c.field-meta.xml
<CustomField>
    <fullName>BudgetApprovalNumber__c</fullName>
    <label>מס&apos; אישור תקציבי</label>
    <length>255</length>
    <type>Text</type>
</CustomField>