force-app/main/default/objects/Course__c/fields/CandidatesNumber__c.field-meta.xml
<CustomField>
    <fullName>CandidatesNumber__c</fullName>
    <label>כמות מועמדים</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>