force-app/main/default/objects/Course__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>העיר בה מוסד ההכשרה מקיים את הקורס</inlineHelpText>
    <label>עיר</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>