force-app/main/default/objects/Course__c/fields/CityName__c.field-meta.xml
<CustomField>
    <fullName>CityName__c</fullName>
    <label>CityName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>