force-app/main/default/objects/Course__c/fields/Course_Code_f__c.field-meta.xml
<CustomField>
    <fullName>Course_Code_f__c</fullName>
    <formula>ProfessionCourse__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מספר קורס</label>
    <type>Text</type>
</CustomField>