force-app/main/default/objects/Course__c/fields/CourseDistrict__c.field-meta.xml
<CustomField>
    <fullName>CourseDistrict__c</fullName>
    <description>מחוז הקורס</description>
    <label>Course District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Center</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>North</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>South</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>National</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Jerusalem</label>
            </value>
            <value>
                <fullName>ארצי</fullName>
                <isActive>false</isActive>
                <label>ארצי</label>
            </value>
            <value>
                <fullName>דרום</fullName>
                <isActive>false</isActive>
                <label>דרום</label>
            </value>
            <value>
                <fullName>ירושלים</fullName>
                <isActive>false</isActive>
                <label>ירושלים</label>
            </value>
            <value>
                <fullName>מרכז</fullName>
                <isActive>false</isActive>
                <label>מרכז</label>
            </value>
            <value>
                <fullName>צפון</fullName>
                <isActive>false</isActive>
                <label>צפון</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>