force-app/main/default/objects/Course__c/fields/Domain_f__c.field-meta.xml
<CustomField>
    <fullName>Domain_f__c</fullName>
    <formula>TEXT( ProfessionCourse__r.Domain__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ענף/תחום</label>
    <type>Text</type>
</CustomField>