force-app/main/default/objects/Course__c/fields/EligibilitySupplement__c.field-meta.xml
<CustomField>
    <fullName>EligibilitySupplement__c</fullName>
    <label>תוספת זכאות</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>