force-app/main/default/objects/Course__c/fields/FundsSource__c.field-meta.xml
<CustomField>
    <fullName>FundsSource__c</fullName>
    <description>סוג ההכשרה</description>
    <label>Funds Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>With Budget</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Haredim</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Minorities</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>With Disablities</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Risk Youth</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Independent Parents</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Welfare population</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Ethiopian Immigrants</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Soldiers</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Hotels</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Day Care</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>With Corona Budget</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Youth</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Starter</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Welfare</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Green Route</label>
            </value>
            <value>
                <fullName>אוכלוסיית רווחה</fullName>
                <isActive>false</isActive>
                <label>אוכלוסיית רווחה</label>
            </value>
            <value>
                <fullName>אנשים עם מוגבלות</fullName>
                <isActive>false</isActive>
                <label>אנשים עם מוגבלות</label>
            </value>
            <value>
                <fullName>הורים עצמאיים</fullName>
                <isActive>false</isActive>
                <label>הורים עצמאיים</label>
            </value>
            <value>
                <fullName>חיילים</fullName>
                <isActive>false</isActive>
                <label>חיילים</label>
            </value>
            <value>
                <fullName>חרדים</fullName>
                <isActive>false</isActive>
                <label>חרדים</label>
            </value>
            <value>
                <fullName>יוצאי אתיופיה</fullName>
                <isActive>false</isActive>
                <label>יוצאי אתיופיה</label>
            </value>
            <value>
                <fullName>מיעוטים</fullName>
                <isActive>false</isActive>
                <label>מיעוטים</label>
            </value>
            <value>
                <fullName>מלונאות</fullName>
                <isActive>false</isActive>
                <label>מלונאות</label>
            </value>
            <value>
                <fullName>מסלול ירוק</fullName>
                <isActive>false</isActive>
                <label>מסלול ירוק</label>
            </value>
            <value>
                <fullName>מעונות יום</fullName>
                <isActive>false</isActive>
                <label>מעונות יום</label>
            </value>
            <value>
                <fullName>מתוקצב</fullName>
                <isActive>false</isActive>
                <label>מתוקצב</label>
            </value>
            <value>
                <fullName>מתוקצב קורונה</fullName>
                <isActive>false</isActive>
                <label>מתוקצב קורונה</label>
            </value>
            <value>
                <fullName>נוער</fullName>
                <isActive>false</isActive>
                <label>נוער</label>
            </value>
            <value>
                <fullName>סטארטר</fullName>
                <isActive>false</isActive>
                <label>סטארטר</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>