force-app/main/default/objects/Course__c/fields/HourCost2__c.field-meta.xml
<CustomField>
    <fullName>HourCost2__c</fullName>
    <label>עלות לשעה 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>