force-app/main/default/objects/Course__c/fields/HourCost__c.field-meta.xml
<CustomField>
    <fullName>HourCost__c</fullName>
    <label>עלות לשעה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>