force-app/main/default/objects/Course__c/fields/Hours1__c.field-meta.xml
<CustomField>
    <fullName>Hours1__c</fullName>
    <label>שעות 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>