force-app/main/default/objects/Course__c/fields/InstitutionNickname__c.field-meta.xml
<CustomField>
    <fullName>InstitutionNickname__c</fullName>
    <label>כינוי מוסד הכשרה</label>
    <length>255</length>
    <type>Text</type>
</CustomField>