force-app/main/default/objects/Course__c/fields/IsForWebsite__c.field-meta.xml
<CustomField>
    <fullName>IsForWebsite__c</fullName>
    <formula>OR(
 RecordType.DeveloperName = &apos;Digital_Course&apos;,
 AND(
    NOT(ISPICKVAL(Status__c , &apos;מוקפא&apos;)),
    NOT(ISPICKVAL(Status__c , &apos;בוטל&apos;)),
    isInPublicSite__c = true
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsForWebsite</label>
    <type>Checkbox</type>
</CustomField>