force-app/main/default/objects/Course__c/fields/isInPublicSite__c.field-meta.xml
<CustomField>
    <fullName>isInPublicSite__c</fullName>
    <defaultValue>true</defaultValue>
    <label>תצוגה באתר</label>
    <type>Checkbox</type>
</CustomField>