force-app/main/default/objects/Course__c/fields/IsStatusActive__c.field-meta.xml
<CustomField>
    <fullName>IsStatusActive__c</fullName>
    <formula>OR(
 RecordType.DeveloperName = &apos;Digital_Course&apos;,
 OR(
    ISPICKVAL(Status__c , &apos;תכנון&apos;),
    ISPICKVAL(Status__c , &apos;גיוס מועמדים&apos;)
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsStatusActive</label>
    <type>Checkbox</type>
</CustomField>