force-app/main/default/objects/Course__c/fields/IsTvaIncluded__c.field-meta.xml
<CustomField>
    <fullName>IsTvaIncluded__c</fullName>
    <defaultValue>true</defaultValue>
    <label>מע&quot;מ</label>
    <type>Checkbox</type>
</CustomField>