force-app/main/default/objects/Course__c/fields/ProfessionalUnit__c.field-meta.xml
<CustomField>
    <fullName>ProfessionalUnit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>יחידה מקצועית</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Branch__c.Account__r.Name</field>
            <operation>equals</operation>
            <value>זרוע העבודה</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>קורסים</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>