force-app/main/default/objects/Course__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <formula>CASE(MONTH(StartDate_Estimated__c),
    1, &apos;א&apos;,
    2, &apos;א&apos;,
    3, &apos;א&apos;,
    4, &apos;ב&apos;,
    5, &apos;ב&apos;,
    6, &apos;ב&apos;,
    7, &apos;ג&apos;,
    8, &apos;ג&apos;,
    9, &apos;ג&apos;,
    10, &apos;ד&apos;,
    11, &apos;ד&apos;,
    12, &apos;ד&apos;,
    null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>רבעון</label>
    <type>Text</type>
</CustomField>