force-app/main/default/objects/Course__c/fields/StartDate_Estimated__c.field-meta.xml
<CustomField>
    <fullName>StartDate_Estimated__c</fullName>
    <label>מועד פתיחה משוער</label>
    <type>Date</type>
</CustomField>