force-app/main/default/objects/Course__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>סטטוס</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Planning</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Recruitng</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Closed for Registration</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Opened</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Closed</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Suspended</label>
            </value>
            <value>
                <fullName>בוטל</fullName>
                <isActive>false</isActive>
                <label>בוטל</label>
            </value>
            <value>
                <fullName>גיוס מועמדים</fullName>
                <isActive>false</isActive>
                <label>גיוס מועמדים</label>
            </value>
            <value>
                <fullName>הסתיים</fullName>
                <isActive>false</isActive>
                <label>הסתיים</label>
            </value>
            <value>
                <fullName>הרשמה נסגרה</fullName>
                <isActive>false</isActive>
                <label>הרשמה נסגרה</label>
            </value>
            <value>
                <fullName>מוקפא</fullName>
                <isActive>false</isActive>
                <label>מוקפא</label>
            </value>
            <value>
                <fullName>נפתח</fullName>
                <isActive>false</isActive>
                <label>נפתח</label>
            </value>
            <value>
                <fullName>תכנון</fullName>
                <isActive>false</isActive>
                <label>תכנון</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>