force-app/main/default/objects/Course__c/fields/StatusText__c.field-meta.xml
<CustomField>
    <fullName>StatusText__c</fullName>
    <formula>IF(
 IsStatusActive__c = true,
 &apos;הרשמה פתוחה&apos;,
 &apos;הרשמה נסגרה&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusText</label>
    <type>Text</type>
</CustomField>