force-app/main/default/objects/Course__c/fields/StudentsCount__c.field-meta.xml
<CustomField>
    <fullName>StudentsCount__c</fullName>
    <label>כמות מסיימים</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>