force-app/main/default/objects/Course__c/fields/StudiesScope2__c.field-meta.xml
<CustomField>
    <fullName>StudiesScope2__c</fullName>
    <label>שעות2/ סטאז&apos;/ ליווי</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>