force-app/main/default/objects/Course__c/fields/StudiesType__c.field-meta.xml
<CustomField>
    <fullName>StudiesType__c</fullName>
    <description>אופי הלימודים</description>
    <label>Studies Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Frontal</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Online</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Hybrid</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Digital</label>
            </value>
            <value>
                <fullName>דיגיטלי</fullName>
                <isActive>false</isActive>
                <label>דיגיטלי</label>
            </value>
            <value>
                <fullName>היברידי</fullName>
                <isActive>false</isActive>
                <label>היברידי</label>
            </value>
            <value>
                <fullName>מקוון</fullName>
                <isActive>false</isActive>
                <label>מקוון</label>
            </value>
            <value>
                <fullName>פרונטלי</fullName>
                <isActive>false</isActive>
                <label>פרונטלי</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>