force-app/main/default/objects/Course__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שם המפעיל</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Affiliation_To_Application__c</field>
            <operation>equals</operation>
            <value>ממשק לפרט, זירת מעסיקים וממשק לפרט</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Courses (מפעיל)</relationshipLabel>
    <relationshipName>Courses2</relationshipName>
    <type>Lookup</type>
</CustomField>