force-app/main/default/objects/Course__c/fields/Timing__c.field-meta.xml
<CustomField>
    <fullName>Timing__c</fullName>
    <description>תזמון לימודים</description>
    <label>Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Morning</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Evening</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Self Study</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Semesterial</label>
            </value>
            <value>
                <fullName>עצמי</fullName>
                <isActive>false</isActive>
                <label>לימוד עצמי</label>
            </value>
            <value>
                <fullName>בוקר</fullName>
                <isActive>false</isActive>
                <label>לימודי בוקר</label>
            </value>
            <value>
                <fullName>ערב</fullName>
                <isActive>false</isActive>
                <label>לימודי ערב</label>
            </value>
            <value>
                <fullName>סמסטריאלי</fullName>
                <isActive>false</isActive>
                <label>סמסטריאלי</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>