force-app/main/default/objects/Course__c/recordTypes/Course.recordType-meta.xml
<RecordType>
    <fullName>Course</fullName>
    <active>true</active>
    <label>קורס</label>
</RecordType>