force-app/main/default/objects/Course__c/recordTypes/Digital_Course.recordType-meta.xml
<RecordType>
    <fullName>Digital_Course</fullName>
    <active>true</active>
    <label>קורס דיגיטלי</label>
</RecordType>