force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CourseNumber__c</columns>
    <columns>ProfessionCourse__c</columns>
    <columns>Program__c</columns>
    <columns>Supplier__c</columns>
    <columns>CourseDistrict__c</columns>
    <columns>StudiesType__c</columns>
    <columns>isInPublicSite__c</columns>
    <columns>Timing__c</columns>
    <columns>Status__c</columns>
    <columns>City__c</columns>
    <columns>Domain_f__c</columns>
    <columns>StartDate_Estimated__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsForWebsite__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>