force-app/main/default/objects/Course__c/listViews/Digital_Courses.listView-meta.xml
<ListView>
    <fullName>Digital_Courses</fullName>
    <columns>NAME</columns>
    <columns>CourseNumber__c</columns>
    <columns>ProfessionCourse__c</columns>
    <columns>StartDate_Estimated__c</columns>
    <columns>Supplier__c</columns>
    <columns>CourseDistrict__c</columns>
    <columns>StudiesType__c</columns>
    <columns>isInPublicSite__c</columns>
    <columns>Timing__c</columns>
    <columns>Status__c</columns>
    <columns>City__c</columns>
    <columns>Domain_f__c</columns>
    <columns>StudiesScope_f__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Course__c.Digital_Course</value>
    </filters>
    <label>קורסים דיגיטליים</label>
</ListView>